--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "15.4.2",
     "react-dev-utils": "^0.5.2",
+    "react-parallax-tilt": "^1.3.38",
     "sass-loader": "^3.2.3",
     "sinon": "^2.1.0",
     "style-loader": "^0.13.2",
